--- a/tv-shows.html
+++ b/tv-shows.html
@@ -26,11 +26,25 @@
             <form id="form">
             <input type="text" placeholder="searchmovies" id="search">
         </form>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="index.html">Movies</a></li>
-            <li><a href="#tv-shows">TV Shows</a></li>
-        </ul>
+        <div class="fullNav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#movies">Movies</a></li>
+                <li><a href="tv-shows.html">TV Shows</a></li>
+            </ul>
+        </div>
+        <div id="mySidenav" class="sidenav">
+
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#movies">Movies</a></li>
+                <li><a href="tv-shows.html">TV Shows</a></li>
+            </ul>
+
+        </div>
+        <span class="sidenavToggle" onclick="openNav()">&#9776;</span>
+            
             </nav>
 
         </div>
