--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <div class="searchform">
                     <form id="form">
                         <input type="text" placeholder="searchmovies" id="search">
+                        <!-- <button id="submit" class="submit">Submit</button> -->
                     </form>
                 </div>
 
